# dynafield

./: .gitignore  README.md  graphql.config.yml  private.env  pyproject.toml
.github/workflows/: publish.yml
dynafield/: __init__.py  base_model.py  config.py  dynamic_document.py  example.py  from_func.py  record_schema.py  utils.py
dynafield/amqp/: __init__.py  model.py  pika.py  publisher.py  simple_publisher.py  subscriber.py
dynafield/clerk/: __init__.py  clerk_cache.py  jwks_cache.py  jwks_refresh.py  production_auth.py  token_verifier.py
dynafield/database/: __init__.py  connection.py  migration_manager.py  protected_session.py  search_data.py  write.py
dynafield/expressions/: __init__.py  filters.py  polars_filter_builder.py  sql_filter_builder.py  types.py
dynafield/fields/: base_field.py  bool_field.py  date_field.py  email_field.py  enum_field.py  float_field.py  int_field.py  json_field.py  list_field.py  object_field.py  str_field.py  uuid_field.py
dynafield/gql/: __init__.py  __init__.pyi  custom_base_model.py  utils.py
dynafield/logger/: __init__.py  __init__.pyi  logger_config.py  logger_config.pyi
dynafield/models/: __init__.py  error_msg.py
dynafield/tracing/: __init__.py  op.py  registry.py
dynafield/utils/: __init__.py  changes.py  dict_tools.py  formating.py  list_tools.py  string_tools.py
example/: app.py  example.py  example_gql_playground.py  gql.py  record_schema.gql  record_schema.graphql
example/_client/: __init__.py  async_base_client.py  client.py  exceptions.py  fragments.py  input_types.py  mutate_record_schema.py  mutate_records.py  query_record_schema.py  query_records.py  record_fields.py
example/client/: __init__.py  async_base_client.py  client.py  fragments.py
tests/: test_base_model.py  test_logger.py  test_mutate_record.py  test_record_registry.py  test_typed_fields.py
