[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynafield"
version = "0.0.1"
description = "Dynamic fields build up schema"
readme = "README.md"
authors = [
    { name = "Badr Elfarri", email = "badr@revvue.ai" },
    { name = "Magnus Mariero", email = "magnus@revvue.ai" }
]
maintainers = [
    { name = "Badr Elfarri", email = "badr@revvue.ai" },
    { name = "Magnus Mariero", email = "magnus@revvue.ai" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
keywords = ["redis", "cache", "memoization", "toolkit", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic[email]",
    "cryptography",
    "redis",
    "polars",
    "python-redis-lock",
    "zstd",
    "pynacl",
    "dockerbuildsystem",
    "httpx",
    "fastapi",
    "uuid-utils",
    "strawberry-graphql[debug-server,fastapi]>=0.283.1",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "mypy",  # Mypy strawberry not supported in 1.18
    "pytest-asyncio",
    "types-zstd"
]
docker = [
    "dockerbuildsystem>=1.1.64",
]

[project.urls]
Homepage = "https://github.com/revvue-ai/dynafield"
Documentation = "https://github.com/revvue-ai/dynafield#readme"
Repository = "https://github.com/revvue-ai/dynafield"
"Bug Tracker" = "https://github.com/revvue-ai/dynafield/issues"
Changelog = "https://github.com/revvue-ai/dynafield/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
dynafield = ["py.typed"]

[tool.isort]
line_length = 999
multi_line_output = 5

[tool.ruff]
line-length = 160
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"config.py" = ["E501"]
"app.py" = ["E402"]
"env.py" = ["E402"]
"migrate.py" = ["E722"]
"test_multi_document_agent.py" = ["E402", "F811"]

[tool.mypy]
exclude = "build/"
ignore_missing_imports = true
plugins = [
    "pydantic.mypy",
    "strawberry.ext.mypy_plugin",
]
